--- a/gb/21/9/27/n13264152.md
+++ b/gb/21/9/27/n13264152.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vhgtdc3457/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vhgtdc3457/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vhgtdc3457/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vhgtdc3457/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vhgtdc3457/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vhgtdc3457/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vhgtdc3457/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vhgtdc3457/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vhgtdc3457/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vhgtdc3457/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vhgtdc3457/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vhgtdc3457/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vhgtdc3457/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vhgtdc3457/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>本土连3天“嘉玲” 打疫苗死亡破800例</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2021年09月27日讯】（大纪元记者赖玟茹台湾台北报导）国内27日再度“嘉玲”，本土已连三天无新增确诊，另有9例境外移入、1人<ahref="https://github.com/vhgtdc3457/djy/blob/master/gb/tag/%E6%AD%BB%E4%BA%A1.md#1">死亡</a>。至于接种疫苗后死亡通报案件，新增5例死亡个案，分别接种AZ、莫德纳及高端，截至目前接种疫苗后死亡累计804例。</p>
+<p>【大纪元2021年09月27日讯】（大纪元记者赖玟茹台湾台北报导）国内27日再度“嘉玲”，本土已连三天无新增确诊，另有9例境外移入、1人<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AD%BB%E4%BA%A1.md#1">死亡</a>。至于接种疫苗后死亡通报案件，新增5例死亡个案，分别接种AZ、莫德纳及高端，截至目前接种疫苗后死亡累计804例。</p>
 <p>9例境外移入个案中，分别为4例男性、5例女性，年龄介于未满10岁至40多岁，分别为7例自缅甸、2例自印尼入境，入境日介于9月11日至9月24日，皆持有搭机前3日内检验阴性报告。</p>
 <p>指挥中心医疗应变组副组长罗一钧表示，9人中有4人，完整接种两剂疫苗、超过14天，符合“突破性感染”定义，分别为自印尼入境的2名个案，曾在7、8月接种中国科兴疫苗，自缅甸入境的2名个案，1人曾于4、5月接种AZ疫苗，另有1人曾于5、6月接种中国国药疫苗。</p>
-<p>至于接种疫苗后不良事件，9月24日至26日间，新增8例接种后<ahref="https://github.com/vhgtdc3457/djy/blob/master/gb/tag/%E6%AD%BB%E4%BA%A1.md#1">死亡</a>的不良事件通报，其中AZ疫苗新增5例，年龄为40至89岁间，为接种后2至23日间发生；同期莫德纳新增1例，年龄为70岁，为接种疫苗后13日发生；同期发生2例高端疫苗，年零为36岁至83岁间，为接种后21日至28日间发生，截至目前，疫苗接种后死亡累计804例，疫苗累计接种1443万0076 剂，疫苗接种人口涵盖率 52.35 %，剂次人口比 61.53 (剂/每百人)。</p>
+<p>至于接种疫苗后不良事件，9月24日至26日间，新增8例接种后<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AD%BB%E4%BA%A1.md#1">死亡</a>的不良事件通报，其中AZ疫苗新增5例，年龄为40至89岁间，为接种后2至23日间发生；同期莫德纳新增1例，年龄为70岁，为接种疫苗后13日发生；同期发生2例高端疫苗，年零为36岁至83岁间，为接种后21日至28日间发生，截至目前，疫苗接种后死亡累计804例，疫苗累计接种1443万0076 剂，疫苗接种人口涵盖率 52.35 %，剂次人口比 61.53 (剂/每百人)。</p>
 <p>至于近期才开始接种的BNT疫苗，首度出现“疑似严重不良事件”，为3女2男，年龄介于13至16岁，且均于接种当天发生，但指挥中心发言人庄人祥表示，目前没有相关个案细节资料，无法进一步说明情形。</p>
 <p>指挥中心统计，截至目前国内累计1万6198例确诊，分别为1565例境外移入，1万4579例本土病例，36例敦睦舰队、3例航空器感染、1例不明及14例调查中；另累计110例移除为空号。2020年起累计830例本土死亡个案。</p>
 <p>指挥中心再次呼吁，民众应落实手部卫生、咳嗽礼节及佩戴口罩等个人防护措施，减少不必要移动、活动或集会，避免出入人多拥挤的场所，或高感染传播风险场域，并主动积极配合各项防疫措施，共同严守社区防线。</p>
@@ -18,47 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/23/n13255141.md#1">【疫情9.23】日本出现“突破性感染”群聚案例</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/23/n13255320.md#1">传10月初降一级？  指挥中心：长时间无新增不明个案概率越高</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/23/n13256055.md#1">钟原：大陆南北疫情急 旅游高峰恐惹祸</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/24/n13256962.md#1">郑文灿建议10月底降一级警戒   若达成2指标</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/24/n13257607.md#1">【疫情9.24】美CDC支持高危人群施打加强剂</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/24/n13257845.md#1">台本土+1 /近三个月的境外确诊个案  21%符合突破性感染</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/26/n13261248.md#1">【疫情9.26】美法官阻止纽约教育局疫苗令</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/26/n13261420.md#1">台本土再“佳玲” 陈时中：周一将公布放宽措施</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/27/n13264149.md#1">8月餐饮业营业额回升 疫情影响趋缓</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/27/n13264201.md#1">中共学美国组同盟打群架？学者：不会成功</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/23/n13255141.md#1">【疫情9.23】日本出现“突破性感染”群聚案例</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/23/n13255320.md#1">传10月初降一级？  指挥中心：长时间无新增不明个案概率越高</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/23/n13256055.md#1">钟原：大陆南北疫情急 旅游高峰恐惹祸</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/24/n13256962.md#1">郑文灿建议10月底降一级警戒   若达成2指标</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/24/n13257607.md#1">【疫情9.24】美CDC支持高危人群施打加强剂</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/24/n13257845.md#1">台本土+1 /近三个月的境外确诊个案  21%符合突破性感染</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/26/n13261248.md#1">【疫情9.26】美法官阻止纽约教育局疫苗令</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/26/n13261420.md#1">台本土再“佳玲” 陈时中：周一将公布放宽措施</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680270.md#1">美民主基金会长见蔡英文：与台湾站一起</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680110.md#1">美参院通过竞争法 促美台军事文化外交往来</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/26/n9894907.md#1" target="_blank">毛时代的诗坛乱象</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11646873.md#1" target="_blank">中共暴政录：最奇葩的战争——战胜国送出国土</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/21/n11886559.md#1" target="_blank">修炼“真善忍”化解家庭恩怨的德国人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/21/n13250236.md#1">【百年真相】土匪还是英雄？还原“座山雕”</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/23/n13254494.md#1">跨越20亿年的史前文明 加蓬核反应堆群释疑</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/21/n13250615.md#1">【方菲访谈】李有甫：从大禹治水看今天中国水患</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/24/n13258207.md#1">【百年真相】坠落凡间七仙女 严凤英文革生死劫</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/23/n13256121.md#1">【未解之谜】不可思议的跨国灵魂互换案</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/25/n13260457.md#1">【新闻看点】人质外交背后 中西两个不同教训</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/25/n13259312.md#1">【拍案惊奇】法重磅报告揭中共老底 数十媒体转发</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/27/n13262476.md#1">桑普：中共加入CPTPP机会近乎零</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/24/n13258869.md#1">王友群：江泽民的人马确实有点慌了</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/25/n13260223.md#1">孟晚舟回国引热议 律师：华为是最大输家</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/25/n13260228.md#1">用包机接孟晚舟回国 网民估花了多少钱</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/26/n13262371.md#1">张曼玉暴瘦近照曝光 健康状况引外界担忧</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/24/n13258607.md#1">去年一年只拍一天戏 古天乐拒绝离港原因曝光</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/25/n13259982.md#1">第56届广播金钟奖得奖名单今揭晓</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/25/n13258918.md#1">网购被骗 53岁胡军自曝遭妻女嘲笑</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/24/n13258741.md#1">曾为周慧敏等歌手伴舞 郭富城两度夺金马影帝</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/26/n13261009.md#1">10分钟猛灌1.5公升可口可乐 北京男子身亡</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/26/n13261194.md#1">巴西母狗自行到兽医诊所产子 公狗在外面等</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/26/n13262229.md#1">长野县居日本第一长寿 专家：因为吃这类食物</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/26/n13260836.md#1">她是美国国家公园最老的管理员 刚满100岁</a></li>
-<li><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/26/n13261690.md#1">疫苗接种后出现副作用 中医师：中毒反应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vhgtdc3457/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vhgtdc3457/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/27/n13264152.htm">本土连3天“嘉玲” 打疫苗死亡破800例</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/27/n13264152.htm">本土连3天“嘉玲” 打疫苗死亡破800例</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vhgtdc3457/djy/blob/master/gb/21/9/27/n13264152.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vhgtdc3457/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vhgtdc3457/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vhgtdc3457/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhgtdc3457/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/9/27/n13264152.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
